# serializer version: 1
# name: test_all_entities[number.test_blanco_unit_soda_water_calibration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_blanco_unit_soda_water_calibration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Soda Water Calibration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:cup-water',
    'original_name': 'Soda Water Calibration',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'calibration_soda',
    'unique_id': 'calibration_soda',
    'unit_of_measurement': 'mL',
  })
# ---
# name: test_all_entities[number.test_blanco_unit_soda_water_calibration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit Soda Water Calibration',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:cup-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mL',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_blanco_unit_soda_water_calibration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities[number.test_blanco_unit_still_water_calibration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_blanco_unit_still_water_calibration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Still Water Calibration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Still Water Calibration',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'calibration_still',
    'unique_id': 'calibration_still',
    'unit_of_measurement': 'mL',
  })
# ---
# name: test_all_entities[number.test_blanco_unit_still_water_calibration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit Still Water Calibration',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 1000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'mL',
    }),
    'context': <ANY>,
    'entity_id': 'number.test_blanco_unit_still_water_calibration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
